--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Graphql server for briefly app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [
     "graphql"
@@ -17,6 +18,7 @@
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.7",
+    "pg": "^8.6.0",
     "uuid": "^8.3.2"
   }
 }
